--- a/config/samples/group_v1_route.yaml
+++ b/config/samples/group_v1_route.yaml
@@ -1,6 +1,20 @@
 apiVersion: group.test.org/v1
 kind: Route
 metadata:
-  name: route-sample
+  name: route-sample1
 spec:
-  # TODO(user): Add fields here
+  routerConfigName: config1
+---
+apiVersion: group.test.org/v1
+kind: Route
+metadata:
+  name: route-sample2
+spec:
+  routerConfigName: config2
+---
+apiVersion: group.test.org/v1
+kind: Route
+metadata:
+  name: route-sample3
+spec:
+  routerConfigName: config3
