set a random value in routerconfig.status

--- a/config/crd/bases/group.test.org_routerconfigs.yaml
+++ b/config/crd/bases/group.test.org_routerconfigs.yaml
@@ -127,9 +127,12 @@ spec:
                       type: string
                     namespace:
                       type: string
+                    token:
+                      type: integer
                   required:
                   - name
                   - namespace
+                  - token
                   type: object
                 type: array
             required:
