--- a/config/samples/group_v1_route.yaml
+++ b/config/samples/group_v1_route.yaml
@@ -25,3 +25,10 @@ metadata:
   name: route-sample4
 spec:
   routerConfigName: config1
+---
+apiVersion: group.test.org/v1
+kind: Route
+metadata:
+  name: route-sample6
+spec:
+  routerConfigName: config1
